# cloudflare-browser-rendering-cli

./: .env.example  .gitignore  README.md  VERSIONS.md  mkdocs.yml  project-overview.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cloudflare_browser_render/: __init__.py  __main__.py  cli.py  client.py  config.py  utils.py
cloudflare_browser_render/renderers/: __init__.py  content.py  json.py  links.py  markdown.py  pdf.py  scrape.py  screenshot.py  snapshot.py
cloudflare_browser_render/utils/: __init__.py  constant.py  env_loader.py
docs/: boilerplate-example.py  index.md
questionary/: __init__.py
scripts/: get_all_nedap_descriptions.py  get_all_nedap_links.py  get_all_nedap_links.sh  get_descriptions_direct.py  manual_verification.py  manual_verification.sh  manual_verify_all.sh
tests/: __init__.py  conftest.py  test_cli_debug.py  test_cli_interactive.py  test_cli_process_result.py  test_cli_smoke.py  test_config.py  test_error_handling.py  test_imports.py  test_main_module.py  test_renderer_scrape_unit.py  test_utils.py
to-do/: add-missing-docstrings.md  add-oauth-authentication.md  migrate-to-cloudflare-sdk.md
