[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "cloudflare-render"
version = "0.1.0"
description = "Interactive CLI for Cloudflare Browser Rendering API"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"
dependencies = [
  "click",
  "questionary",
  "rich",
  "httpx",
  "python-dotenv",
  "cloudflare>=4.3",
]

[project.optional-dependencies]
lint = ["black", "ruff"]
test = ["pytest", "pytest-cov"]
docs = ["mkdocs"]

[tool.pdm.packages]
cloudflare_browser_render = "cloudflare_browser_render"

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.resolution]
respect-source-order = true
allow-prereleases = false

[project.scripts]
cloudflare-render = "cloudflare_browser_render.cli:cli"
