[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "cloudflare-render"
version = "0.2.0"
description = "Interactive CLI for Cloudflare Browser Rendering API"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"
dependencies = [
  "click>=8.1.7",
  "questionary>=2.0.1",
  "rich>=13.7.1",
  "cloudflare>=2.20.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "beautifulsoup4>=4.12.3",
]

[project.optional-dependencies]
lint = ["ruff", "pylint"]
test = ["pytest", "pytest-cov"]
docs = ["mkdocs-material"]

[tool.pdm.packages]
cloudflare_browser_render = "cloudflare_browser_render"

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.resolution]
respect-source-order = true
allow-prereleases = false

[project.scripts]
cloudflare-render = "cloudflare_browser_render.cli:cli"
cloudflare-browser-render = "cloudflare_browser_render.cli:cli"
cloudflare-browser-rendering = "cloudflare_browser_render.cli:cli"
cbr = "cloudflare_browser_render.cli:cli"
